chores: update translations

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -28,8 +28,8 @@
             }
         },
         {
-            "tooltip": "aladdine.abdou@gmail.com",
-            "url": "mailto:aladdine.abdou@gmail.com",
+            "tooltip": "aladdine.dev@gmail.com",
+            "url": "mailto:aladdine.dev@gmail.com",
             "icon": {
                 "codePoint": "0xeaad",
                 "fontFamily": "FontAwesome"
