--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -58,6 +58,63 @@
     "experiences": [
         {
             "role": "Mobile App Developer",
+            "company": "Linnovlab",
+            "description": "Development of a digital ecosystem for restaurants notably POS systems, kiosks, and dashboards, enabling a seamless user experience with real-time and offline features.",
+            "isPresent": true,
+            "startYear": 2023,
+            "endYear": 2025,
+            "technologies": [
+                {
+                    "name": "Flutter",
+                    "icon": {
+                        "assetName": "assets/icons/software-development/flutter.svg"
+                    }
+                },
+                {
+                    "name": "Dart",
+                    "icon": {
+                        "assetName": "assets/icons/other/dart.svg"
+                    }
+                },
+                {
+                    "name": "GraphQL",
+                    "icon": {
+                        "assetName": "assets/icons/software-development/graphql.svg"
+                    }
+                },
+                {
+                    "name": "PostgreSQL",
+                    "icon": {
+                        "assetName": "assets/icons/software-development/postgresql.svg"
+                    }
+                },
+                {
+                    "name": "Docker",
+                    "icon": {
+                        "assetName": "assets/icons/software-development/docker.svg"
+                    }
+                },
+                {
+                    "name": "AWS",
+                    "icon": {
+                        "codePoint": "0xeed1",
+                        "fontFamily": "BoxIcons"
+                    }
+                }
+            ],
+            "links": [
+                {
+                    "url": "https://linnovlab.com",
+                    "display": "Linnovlab"
+                },
+                {
+                    "url": "https://apps.apple.com/fr/app/caisse-digital-foody/id6664054501",
+                    "display": "Digital Foody POS - iOS"
+                }
+            ]
+        },
+        {
+            "role": "Mobile App Developer",
             "company": "Walt Disney Imagineering",
             "description": "Development of an offline-first mobile snagging application for Disneyland Paris, streamlining information gathering for technical experts in the field and enhancing communication with maintenance services for problem-solving.",
             "isPresent": false,
@@ -149,6 +206,12 @@
                     "icon": {
                         "assetName": "assets/icons/other/firebase.svg"
                     }
+                }
+            ],
+            "links": [
+                {
+                    "url": "https://www.smt-alarme-videosurveillance.com",
+                    "display": "Solutions Multi Techniques"
                 }
             ]
         },
