--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -54,7 +54,7 @@
             "url": "https://drive.google.com/file/d/1SEDu-wdXXsYXX48Ee3EKLg7YhdKyt72U/view?usp=sharing"
         }
     ],
-    "aboutDescription": "Hi, I'm Aladdine — a passionate mobile app developer with 3+ years of experience turning ideas into user-centric applications.\nSpecialized in Flutter, I've built and shipped apps across diverse fields — from show quality and field operations to food tech and wholesale.\nI'm also deeply interested in embedded systems, cybersecurity, and game design, where I explore the creative intersections between these areas.\nI'm driven by building meaningful products and contributing to innovative, challenging projects.",
+    "aboutDescription": "Hi, I'm Aladdine — a passionate mobile app developer with 3+ years of experience turning ideas into user-centric applications.\nSpecialized in Flutter, I've built and shipped apps across diverse fields — from show quality and field operations to food technology and wholesale.\nI'm also deeply interested in embedded systems, cybersecurity, and game design, where I explore the creative intersections between these areas.\nI'm driven by building meaningful products and contributing to innovative, challenging projects.",
     "experiences": [
         {
             "role": "Mobile App Developer",
