--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -54,7 +54,7 @@
             "url": "https://drive.google.com/file/d/1SEDu-wdXXsYXX48Ee3EKLg7YhdKyt72U/view?usp=sharing"
         }
     ],
-    "aboutDescription": "Salut, je m'appelle Aladdine, développeur mobile passionné avec plus de 3 ans d'expérience dans la transformation d'idées en applications centrées sur l'utilisateur.\nSpécialisé en Flutter, j'ai conçu et mis en production des applications dans divers domaines, de la qualité scénographique au suivi de chantier, en passant par la restauration et la vente en gros.\nJe m'intéresse également beaucoup aux systèmes embarqués, à la cybersécurité et au game design, où j'explore les intersections créatives entre ces secteurs.\nJ'aspire à mettre mes compétences au service de projets inspirants et challengeants.",
+    "aboutDescription": "Salut, je m'appelle Aladdine, développeur mobile passionné avec plus de 3 ans d'expérience dans la transformation d'idées en applications centrées sur l'utilisateur.\nSpécialisé en Flutter, j'ai développé et mis en production des applications dans divers domaines, allant de la qualité scénographique et au suivi de chantier, en passant par la restauration et la vente en gros.\nJe m'intéresse également beaucoup aux systèmes embarqués, à la cybersécurité et au game design, où j'explore les intersections créatives entre ces différents secteurs.\nJ'aspire à mettre mes compétences au service de projets inspirants et challengeants.",
     "experiences": [
         {
             "role": "Développeur Mobile",
