--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -54,7 +54,7 @@
             "url": "https://drive.google.com/file/d/1SEDu-wdXXsYXX48Ee3EKLg7YhdKyt72U/view?usp=sharing"
         }
     ],
-    "aboutDescription": "Salut, je m'appelle Aladdine, développeur mobile passionné avec plus de 3 ans d'expérience dans la transformation d'idées en applications centrées sur l'utilisateur.\nSpécialisé en Flutter, j'ai développé et mis en production des applications dans divers domaines, allant de la qualité scénographique et au suivi de chantier, en passant par la restauration et la vente en gros.\nJe m'intéresse également beaucoup aux systèmes embarqués, à la cybersécurité et au game design, où j'explore les intersections créatives entre ces différents secteurs.\nJ'aspire à mettre mes compétences au service de projets inspirants et challengeants.",
+    "aboutDescription": "Développeur mobile passionné, je transforme les idées en applications centrées sur l'utilisateur.\nAvec plus de 3 ans d'expérience en Flutter, j'ai conçu et mis en production des applications dans divers secteurs tels que la qualité scénographique, le suivi de chantier, la restauration ou encore la vente en gros.\nJe m'intéresse également aux systèmes embarqués, à la cybersécurité et au game design, où j'explore les intersections créatives entre ces différents domaines.\nJ'aspire à mettre mes compétences au service de projets inspirants et challengeants.",
     "experiences": [
         {
             "role": "Développeur Mobile",
@@ -299,7 +299,7 @@
         },
         {
             "name": "Learn Flow Backoffice",
-            "description": "Il s'agit du back-office conçu pour les managers du projet Learn Flow. Cette Single-Page App leur permet de surveiller l'activité de leurs applications et utilisateurs (trafic, factures...).",
+            "description": "Learn Flow est un projet de groupe visant à créer une solution de mise en relation d'élèves et d'enseignants. Il s'agit du back-office conçu pour les managers du projet Learn Flow. Cette Single-Page App leur permet de surveiller l'activité de leurs applications et utilisateurs (trafic, factures...).",
             "url": "https://github.com/AladdineDev/learnflow_backoffice#readme",
             "icon": {
                 "codePoint": "0xefb7",
