--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -54,7 +54,7 @@
             "url": "https://drive.google.com/file/d/1SEDu-wdXXsYXX48Ee3EKLg7YhdKyt72U/view?usp=sharing"
         }
     ],
-    "aboutDescription": "Hi, I'm Aladdine — a passionate mobile app developer with 3+ years of experience turning ideas into user-centric applications.\nSpecialized in Flutter, I've built and shipped apps across diverse fields — from show quality and field operations to food technology and wholesale.\nI'm also deeply interested in embedded systems, cybersecurity, and game design, where I explore the creative intersections between these areas.\nI'm driven by building meaningful products and contributing to innovative, challenging projects.",
+    "aboutDescription": "I'm a mobile app developer passionate about turning ideas into user-centric applications.\nWith 3+ years of experience working with Flutter, I've built and shipped apps across diverse fields — from show quality and field operations to food tech and wholesale.\nMy interests also include embedded systems, cybersecurity, and game design, where I enjoy exploring the creative intersections between these domains.\nI'm driven by building meaningful products and contributing to innovative, challenging projects.",
     "experiences": [
         {
             "role": "Mobile App Developer",
@@ -299,7 +299,7 @@
         },
         {
             "name": "Learn Flow Backoffice",
-            "description": "This is the back-office build for managers in the Learn Flow project. This Single-Page App enables them to monitor activity such as user traffic and invoices associated with their applications and users.",
+            "description": "Learn Flow is a collaborative project focused on creating a solution that connects students and teachers. This is the back-office build for managers in the Learn Flow project. This Single-Page App enables them to monitor activity such as user traffic and invoices associated with their applications and users.",
             "url": "https://github.com/AladdineDev/learnflow_backoffice#readme",
             "icon": {
                 "codePoint": "0xefb7",
